# lawful-conversions

./: .gitignore  CHANGELOG.md  README.md  cabal.project  isomorphism-class.cabal  lawful-conversions.cabal
.github/: copilot-instructions.md
.github/workflows/: build.yaml  bump.yaml  format-and-test.yaml  release.yaml
src/test/: Main.hs
test/: Main.hs
